--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,5 +7,8 @@
 @layer components {
   .more-btn {
     @apply absolute right-5 bottom-5 hover:text-white hover:bg-purple-900 hover:rounded-md px-3 py-2;
+  }
+  .card-img {
+    @apply w-16 h-16 absolute left-4 -top-8 rounded-md bg-cover bg-no-repeat;
   }
 }
